--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,31 @@
+attrs==20.3.0
+backcall==0.2.0
+decorator==4.4.2
 flake8==3.8.4
 importlib-metadata==3.4.0
+iniconfig==1.1.1
+ipdb==0.13.4
+ipython==7.20.0
+ipython-genutils==0.2.0
+jedi==0.18.0
 mccabe==0.6.1
+mock==4.0.3
+packaging==20.9
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
 pkg-resources==0.0.0
+pluggy==0.13.1
+prompt-toolkit==3.0.16
+ptyprocess==0.7.0
+py==1.10.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
+Pygments==2.8.0
+pyparsing==2.4.7
+pytest==6.2.2
+toml==0.10.2
+traitlets==5.0.5
 typing-extensions==3.7.4.3
+wcwidth==0.2.5
 zipp==3.4.0
